add resources listing

--- a/for-hire/index.qmd
+++ b/for-hire/index.qmd
@@ -8,8 +8,8 @@ I am currently looking for full time work in the broad fields of Data Science an
 
 ### Consulting & Contract Work
 
-If you are in need of a PhD economist -- specifically one who specializes in game theory, behavioral economics, or consumer choice theory -- I am available for consulting work and my rate is negotiable. I'd love to chat, just [send me an email](mailto:cwiegand@ureogon.edu)
+If you are in need of a PhD economist -- specifically one who specializes in game theory, behavioral economics, or consumer choice theory -- I am available for consulting work and my rate is negotiable. I'd love to chat, just [send me an email](mailto:cwiegand@ureogon.edu).
 
 Additionally, if you are looking for an economics litigation consultant, my rate is fair, negotiable, and I encourage you to reach out. 
 
-If email is not your preferred mode of communication, [check out my linkedin](https://www.linkedin.com/in/connor-wiegand)
+If email is not your preferred mode of communication, [check out my linkedin](https://www.linkedin.com/in/connor-wiegand).
