update home to welcome

--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 ---
-title: "_C-T-We - dot - Me_"
+title: Welcome
 toc: false
-pagetitle: "Home | Connor T. Wiegand"
+# pagetitle: "Home | Connor T. Wiegand"
 ---
 
 I am a research economist from the University of Oregon. My research includes out-of-the-lab experiments which reveal longitudinal time preferences and strategic behavior in the presence of Artificial Intelligence. Broadly speaking, the labels "Experimental Economist", "Behavioral Economist", "Game Theorist", and "Data Scientist" would all be accurate descriptions of what I do. I'd like to consider myself at the intersection of extracting practical information from experimental data and modelling meaningful interaction using a modern tool case of microeconomic theory.
@@ -105,3 +105,5 @@ I am a research economist from the University of Oregon. My research includes ou
 
 
 ::::::
+
+{{< animate bounce "" >}}
