--- a/teaching/index.qmd
+++ b/teaching/index.qmd
@@ -5,6 +5,7 @@ listing:
   - id: ior-listing
     template: ior-listing.md.ejs
     contents: /_files/_IoR.yml
+    feed: true
   - id: ta-gr-listing
     template: ta-gr-listing.md.ejs
     contents: /_files/_ta-gr.yml
