--- a/proj/index.qmd
+++ b/proj/index.qmd
@@ -7,6 +7,7 @@ listing:
     template: proj-listing.md.ejs
     # type: default
     contents: projects.yml
+    feed: true
 ---
 
 # Fields of Interest
