update about page

--- a/about/index.qmd
+++ b/about/index.qmd
@@ -30,7 +30,7 @@ I was born and raised in the Pacific Northwest (specifically: [Bellingham, WA](h
 
 While in high school, I participated in the [Running Start](https://en.wikipedia.org/wiki/Running_Start) program, which allowed me to get my A.A. degree at the same time while I was in high school. I would highly recommend the Running Start program if it's available in your state, and would love to chat more about it if you know someone who is interested. 
 
-Getting my associates degree so early allowed me to jump right in to my undergraduate program at the University of Washigton in Seattle. In just three years, I was able to earn a double major in Mathematics and Economics. While there, I took accelerated honors courses in both Real Analysis and Computer Science, attained Honor Roll^[AKA Dean's List] across multiple terms, and took the Core Ph.D. Microeconomics sequence during my last year. 
+Getting my associates degree so early allowed me to jump right in to my undergraduate program at the University of Washigton in Seattle. In just three years, I was able to earn a double major in Mathematics and Economics. While there, I took accelerated honors courses in both Real Analysis and Computer Science, attained Honor Roll^[AKA Dean's List] across multiple terms, and took the Core Ph.D. Microeconomics sequence during my final undergraduate year. 
 
 I am currently at the end of my Ph.D. program at the University of Oregon and am looking to start my career in economics, data science, or tech. 
 :::
@@ -38,9 +38,11 @@ I am currently at the end of my Ph.D. program at the University of Oregon and am
 :::{.animate__animated .animate__fadeInUp}
 ### Free time
 
-In my younger years, I enjoyed playing _[video games]_ and snowboarding at [Mt. Baker](https://en.wikipedia.org/wiki/Mount_Baker). I still get around to the former from time to time, but I would love to pick up the latter once my educational career is finished. I've also recently resumed playing guitar, which I started in grade school after moving on from the cello. 
+I've always enjoyed a wide assortment of games -- whether they be video, board, word, etc. Today, that looks like board games such as Bananagrams and Ticket to Ride as well as digital titles like Elden Ring and Baldur's Gate. I'm also a big fan of [Geoguessr](https://www.geoguessr.com/) and NYT's [Connections](https://www.nytimes.com/games/connections). In the past, I've had some good runs playing Magic: The Gathering, Team-based and _Battle-Royale_-style FPSs, platformers from the _Mario_ franchise as well as other Nintendo classics such as _Mario Kart_, and (like many) _Pokemon Go_. 
 
-Today, I enjoy playing board games such as Bananagrams and Ticket to Ride and going for walks around my neighborhood with my wife. This year, we began fostering [kittens](/resources/misc/index.qmd#Cats) through an [amazing local organization](https://catrescues.org/) in Eugene. When it comes to watching TV, I am a big fan of comedy. Whether it be random trivia, a new programming framework, a language, or a subject I never got around to in school, I simply love to learn new things ^[makes sense that I married a teacher, right?]. 
+Growing up in the Pacific Northwest, I value a good hike with nice views. I also enjoy simply going for walks around my neighborhood with my wife and being able to bike to work on weather-permitting days. In my younger years, I loved snowboarding at [Mt. Baker](https://en.wikipedia.org/wiki/Mount_Baker), and I would love to pick this pastime up again in the future once my educational career is finished. 
+
+This year, my wife and I began fostering [kittens](/resources/misc/index.qmd#Cats) through an [amazing local organization](https://catrescues.org/) in Eugene. I've recently resumed playing guitar, an activity I started in grade school after moving on from the cello. Additionally, I am an avid coffee drinker and so-called "foodie". Whether it be random trivia, a new programming framework, a language, or a subject I never got around to in school, I simply love to learn new things ^[It makes sense that I married a teacher, right?]. 
 :::
 :::
 
