--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ toc: false
 # pagetitle: "Home | Connor T. Wiegand"
 ---
 
-I am a research economist from the University of Oregon. My research includes out-of-the-lab experiments which reveal longitudinal time preferences and strategic behavior in the presence of Artificial Intelligence. Broadly speaking, the labels "Experimental Economist", "Behavioral Economist", "Game Theorist", and "Data Scientist" would all be accurate descriptions of what I do. I'd like to consider myself at the intersection of extracting practical information from experimental data and modeling meaningful interaction using a modern tool case of microeconomic theory.
+I am a research economist from the University of Oregon working in behavioral and experimental economics, game theory, and data science.  My research includes out-of-the-lab experiments which reveal longitudinal time preferences and strategic behavior in the presence of Artificial Intelligence. More broadly, I am interested in designing experiments, extracting practical information from the data they generate, and modeling key economic behaviors using a modern microeconomic theory.
 
 ### Site Highlights
 
