--- a/proj/research-pages/_proj.bib
+++ b/proj/research-pages/_proj.bib
@@ -4,5 +4,5 @@ author = "Kolpin, Van and Wiegand, Connor Thomas",
 booktitle = "The Elgar Encyclopedia on the Economics of Competition, Regulation and Antitrust", 
 publisher = "Edward Elgar Publishing", 
 editor = "Noel, Michael D.",
-year = "forthcoming"
+year = "November 2024"
 }
