minor change: remove :

--- a/proj/research-pages/trust/_trust-and-ai.qmd
+++ b/proj/research-pages/trust/_trust-and-ai.qmd
@@ -19,6 +19,6 @@ In this study, we experimentally explore the impact of AI as a supportive tool f
 Recommended citation: {{< meta r-citation >}}
 
 
-## Full Paper:
+## Full Paper
 
 ![]({{< meta path >}}){height=800px width=95%}
