--- a/not-a-blog/index.qmd
+++ b/not-a-blog/index.qmd
@@ -1,10 +1,11 @@
 ---
 title: "Not-a-Blog"
+draft: true
 listing:
    type: default
    contents: posts
-   id: blog-posts
-   fields: [title, date, categories, reading-time, image, description]
+   # id: blog-posts
+   fields: [title, date, categories, reading-time, image, description, file-modified]
    page-size: 5
    sort-ui: [date, title]
    categories: unnumbered
@@ -12,7 +13,4 @@ listing:
    feed: true
 ---
 
-This isn't a blog
-
-::::{#blog-posts}
-::::
+Just some thoughts.
