--- a/not-a-blog/posts/blog-post-1/index.qmd
+++ b/not-a-blog/posts/blog-post-1/index.qmd
@@ -1,7 +1,8 @@
 ---
 title: 'Blog Post number 1'
-name: 'Blog Post number 1'
+# name: 'Blog Post number 1'
 date: 2024-06-25
+date-modified: 2025-10-02
 categories:
   - cool posts
   - category1
